[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/Agents/ZERO.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Ships/d59bicm-01bffdcd-34bd-4ae2-b143-7d5f72bdcbd0.png" type="Texture" id=2]
[ext_resource path="res://Death.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Sounds/explosion01.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="ZERO" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 199
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -0.186, 0.186 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.568787, -2.27521 )
polygon = PoolVector2Array( -52.4197, -28.1419, -38.7972, -50.6189, 24.5472, -54.0245, 53.1624, -46.9942, 46.3431, -22.6929, 53.8354, 16.1311, 58.4645, 41.8293, 17.736, 54.6146, -21.7692, 57.339, -52.7603, 35.8837, -57.8687, 1.48698 )

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 65

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -0.568787, -2.27521 )
polygon = PoolVector2Array( -54.6172, -30.656, -38.806, -54.6363, 25.7564, -58.3256, 57.1152, -49.1024, 49.7367, -22.2234, 57.3787, 15.1964, 60.8045, 43.9201, 18.9048, 58.6772, -23.7854, 59.7313, -56.7254, 38.1227, -62.2593, 1.75693 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
